Test: Fix naming issue with user table, Refactor: application-test.properties and add test them to Calling test class